--- a/app/assets/css/common.less
+++ b/app/assets/css/common.less
@@ -1,2 +1,6 @@
-@redColor:"#ea3e3f";
-@blueColor:"#008489";
+@redColor:#ea3e3f;
+@blueColor:#008489;
+@greenColor:#36ca78;
+@yellowColor:#f5a623;
+@yellow2Color:#fbbf00;
+@fontColor:#484848;
