--- a/app/assets/css/issueList.less
+++ b/app/assets/css/issueList.less
@@ -99,7 +99,8 @@
     }
     .body,.answer{
       line-height: 20px;
-      font-size:14px;
+      font-size:15px;
+      padding: 0;
       word-break: break-all;
     }
     .answer span{
@@ -112,11 +113,9 @@
     }
   }
   .top_list:last-child{
-    border-bottom: none;
-  }
-  .line{
-    border-bottom:1px solid #ddd;
-    height:1px;
+    .line{
+      border-bottom: none !important;
+    }
   }
   .am-navbar{
     background-color: #818992;
