--- a/app/assets/css/meeting.less
+++ b/app/assets/css/meeting.less
@@ -57,10 +57,12 @@
   .tabs {
     color: #333;
     line-height: 50px;
-    display: flex;
+    //display: flex;
     background-color: #fff;
     margin-bottom: 10px;
-    .tab_list {
+    min-width: 100%;
+    overflow: auto;
+    .tabs_list {
       width: 300%;
     }
     .tab {
