--- a/app/assets/css/report.less
+++ b/app/assets/css/report.less
@@ -1,7 +1,7 @@
 .report{
-  .am-list-item{
+  .am-list .am-list-item{
     border-radius: 5px;
-    border: 1px solid #d5d5d5;
+    border: 1px solid #d5d5d5 !important;
   }
 }
 .report_modal .am-modal-content {
