--- a/app/assets/css/errorsGather.less
+++ b/app/assets/css/errorsGather.less
@@ -1,225 +1,251 @@
-.errorsGather{
-	&-header{
-		margin-top: 20px;
-		border-bottom: 1px solid #e2e2e2;
-		&-title{
-			font-weight: bold;
-			font-size: 20px;
-			margin-right: 10px;
-		}
-	}
+.errorsGather {
+  &-header {
+    margin-top: 20px;
+    border-bottom: 1px solid #e2e2e2;
+    &-title {
+      font-weight: bold;
+      font-size: 20px;
+      margin-right: 10px;
+    }
+  }
 
-	&-content{
-	    margin-top: 20px;
-		:global{
-			.ant-radio-button-wrapper:first-child,
-			.ant-radio-button-wrapper:last-child{
-				border-radius: 4px;
-			}
+  &-content {
+    margin-top: 20px;
+    width: 100%;
+    overflow-x: hidden;
+    :global {
+      .ant-radio-button-wrapper:first-child,
+      .ant-radio-button-wrapper:last-child {
+        border-radius: 4px;
+      }
 
-			.ant-radio-button-wrapper{
-				border-radius: 4px;
-				margin-right: 10px;
-				border: 1px solid #c6c6c6;
-				line-height: normal;
-				height: auto;
-				padding: 10px 15px;
-			}
-			.ant-radio-button-wrapper:first-child{
-				border-left: 1px solid #c6c6c6;
-			}
+      .ant-radio-button-wrapper {
+        border-radius: 4px;
+        margin-right: 10px;
+        border: 1px solid #c6c6c6;
+        line-height: normal;
+        height: auto;
+        padding: 10px 15px;
+      }
+      .ant-radio-button-wrapper:first-child {
+        border-left: 1px solid #c6c6c6;
+      }
 
-			.ant-radio-button-wrapper:hover{
-				color: #f74c4c;
-				border: 1px solid #f74c4c;
-	   	 		position: relative;
-			}
-			.ant-radio-button-wrapper:not(:first-child)::before {
-			    content: "";
-			    display: block;
-			    top: 0;
-			    left: 0;
-			    width: 0;
-			    height: 100%;
-			    position: absolute;
-			    background-color: transparent;
-			}
-			.ant-radio-button-wrapper-checked:first-child{
-				border-color: #f74c4c;
-			    -webkit-box-shadow: none !important;
-			    box-shadow: none !important;
-			}
-			.ant-radio-button-wrapper-checked{
-				background: #fff;
-			    border-color: #f74c4c;
-			    color: #f74c4c;
-			    -webkit-box-shadow: none !important;
-			    box-shadow: none !important;
-			    z-index: 1;
-			}
-			.ant-radio-button-wrapper-checked:hover{
-				box-shadow: none;
-			}
-			.ant-radio-button-wrapper-checked::before{
-				background-color: #f74c4c !important;
-	    		opacity: 0;
-			}
-		}
-	    .checkbox-group{
-	    	margin-bottom: 20px;
-	    }
+      .ant-radio-button-wrapper:hover {
+        color: #f74c4c;
+        border: 1px solid #f74c4c;
+        position: relative;
+      }
+      .ant-radio-button-wrapper:not(:first-child)::before {
+        content: "";
+        display: block;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        position: absolute;
+        background-color: transparent;
+      }
+      .ant-radio-button-wrapper-checked:first-child {
+        border-color: #f74c4c;
+        -webkit-box-shadow: none !important;
+        box-shadow: none !important;
+      }
+      .ant-radio-button-wrapper-checked {
+        background: #fff;
+        border-color: #f74c4c;
+        color: #f74c4c;
+        -webkit-box-shadow: none !important;
+        box-shadow: none !important;
+        z-index: 1;
+      }
+      .ant-radio-button-wrapper-checked:hover {
+        box-shadow: none;
+      }
+      .ant-radio-button-wrapper-checked::before {
+        background-color: #f74c4c !important;
+        opacity: 0;
+      }
+    }
+    .checkbox-group {
+      padding: 0 20px;
+      .button {
+        margin-right: 5px;
+        margin-bottom: 5px;
+        border: 1px solid #d5d5d5;
+        color: #484848;
+        height: 35px;
+        line-height: 35px;
+        &::before {
+          border-color: #d5d5d5;
+        }
+        &.active {
+          border-color: #ea3e3f;
+          background-color: #ea3e3f;
+          color: #fff;
+          &::before {
+            border-color: #ea3e3f;
+          }
+        }
+      }
+      .am-button-ghost.am-button-active {
+        border: 1px solid #ea3e3f;
+      }
+    }
 
-	    &-wrapper{
-	    	padding: 30px 20px;
-	    	background-color: #fff;
-	    	border-radius: 3px;
-			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04);
-			border: 1px solid  rgba(0, 0, 0, 0.16);
-		    color: #505762;
-			.question{
-				padding: 10px;
-    			border-bottom: 1px solid #e9e9e9;
-    			&-body{
-    				cursor: pointer;
-    			}
-    			&-btn{
-    				font-size: 12px;
-    				span{
-    					margin-right: 20px;
-    				}
-    				.btn{
-    					cursor: pointer;
-    					color: #007790;
-    				}
-    			}
-			}
-	    }
-	}
+    &-wrapper {
+      padding: 20px 15px;
+      background-color: #fff;
+      border-radius: 3px;
+      color: #505762;
+      .question {
+        padding: 10px;
+        border-bottom: 1px solid #e9e9e9;
+        &-body {
+          cursor: pointer;
+          line-height: 20px;
+          font-size: 15px;
+          word-break: break-all;
+        }
+        &-btn {
+          font-size: 13px;
+          margin: 15px auto 5px !important;
+          span {
+            margin-right: 20px;
+          }
+          .btn {
+            cursor: pointer;
+            color: #007790;
+          }
+          .right {
+            float: right;
+            margin: 0 0 0 20px;
+          }
+        }
+      }
+    }
+  }
 }
 
-.errorModal{
-	:global{
-		.ant-modal-title{
-			font-size: 24px;
-  			font-weight: bold;
-  			color: #505762;
-		}
-		.ant-btn{
-		    border-radius: 26px;
-		    background-color: #ffffff;
-		    border: 2px solid #007790;
-		    color: #007790;
-		    padding: 0px 30px;
-		}
-		.ant-btn-primary:hover, .ant-btn-primary:focus{
-			color: #fff;
-		    background-color: #007790;
-		    border-color: #007790;
-		}
-		.ant-modal-close-x{
-			font-size: 26px;
-		}
-		.ant-modal-header{
-			border-bottom: none;
-		}
-		.ant-modal-body{
-			padding: 10px 24px;
-		}
-	}
+.errorModal {
+  :global {
+    .ant-modal-title {
+      font-size: 24px;
+      font-weight: bold;
+      color: #505762;
+    }
+    .ant-btn {
+      border-radius: 26px;
+      background-color: #ffffff;
+      border: 2px solid #007790;
+      color: #007790;
+      padding: 0px 30px;
+    }
+    .ant-btn-primary:hover, .ant-btn-primary:focus {
+      color: #fff;
+      background-color: #007790;
+      border-color: #007790;
+    }
+    .ant-modal-close-x {
+      font-size: 26px;
+    }
+    .ant-modal-header {
+      border-bottom: none;
+    }
+    .ant-modal-body {
+      padding: 10px 24px;
+    }
+  }
 
-	.content{
-		&-title{
-			span{
-				display: inline-block;
-				border-radius: 3px;
-  				border: 1px solid #979797;
-  				margin-right: 10px;
-    			padding: 1px 8px;
-			}
-		}
+  .content {
+    font-size: 15px;
+    padding: 10px 20px;
+    line-height: 20px;
+    &-title {
+      padding: 10px 0;
+      span {
+        display: inline-block;
+        border-radius: 3px;
+        border: 1px solid #ddd;
+        margin-right: 10px;
+        padding: 1px 8px;
+        font-size: 13px;
+      }
+    }
 
-		&-question{
-			.questionChoose{
-				text-align: center;
-				:global{
-					.ant-radio-button-wrapper{
-						border-radius: 50%;
-						margin-right: 10px;
-						border: 1px solid #979797;
-						line-height: normal;
-						height: auto;
-						padding: 10px 15px;
-						&:not(:first-child)::before {
-						    content: "";
-						    display: block;
-						    top: 0;
-						    left: 0;
-						    width: 0;
-						    height: 100%;
-						    position: absolute;
-						    background-color: transparent;
-						}
-						&-checked{
-							background: #fff;
-						    color: #fff;
-						    background-color: #007790;
-						    border-color: #007790;
-						    -webkit-box-shadow: none; 
-						    box-shadow: none; 
-						    z-index: 1;
-						}
-						&:hover{
-							color: #fff;
-						    background-color: #007790;
-						    border-color: #007790;
-						}
-						&-checked::before{
-							background-color: transparent !important;
-    						opacity: 0;
-						}
-					}
-				}
-				.checkbod-group{
-					:global{
-						.ant-checkbox{
-							display: none;
-						}
-						.ant-checkbox-wrapper{
-							border-radius: 50%;
-						    margin-right: 10px;
-						    border: 1px solid #979797;
-						    line-height: normal;
-						    height: auto;
-						    padding: 10px 7px;
-						    &:hover, &.active{
-						    	color: #fff;
-							    background-color: #007790;
-							    border-color: #007790;
-						    }
-						}
-					}
-				}
-			}
-			.questionAnswer{
-				display: flex;
-				.answerText{
-				    color: #505762;
-				    font-weight: bold;
-				    margin-right: 10px;
-				}
-				.answer{
-					margin-right: 5px;
-				}
-			}
-			.questionAnalysis{
-				margin-top: 10px;
-				padding-top: 10px;
-				border-top: 1px solid #dbdbdb;
-				.analysisText{
-					color: #505762;
-				    font-weight: bold;
-				}
-			}
-		}
-	}
+    &-question {
+      .questionBody {
+        margin: 15px 0;
+        word-break: break-all;
+      }
+      .questionChoice {
+        p {
+          padding: 6px 0;
+        }
+      }
+      .questionChoose {
+        text-align: center;
+        margin-top: 20px;
+      }
+      .questionAnswer {
+        display: flex;
+        padding: 10px 0;
+        .answerText {
+          color: #505762;
+          font-weight: bold;
+          margin-right: 10px;
+        }
+        .answer {
+          margin-right: 5px;
+        }
+      }
+      .questionAnalysis {
+        margin-top: 10px;
+        padding-top: 10px;
+        border-top: 1px solid #dbdbdb;
+        .analysisText {
+          line-height: 30px;
+          color: #505762;
+          font-weight: bold;
+        }
+      }
+      img{
+        max-width: 100%;
+        margin: 5px 0;
+      }
+      :global {
+        .am-radio-wrapper,.am-checkbox-wrapper{
+          width: 40px;
+          height: 40px;
+          border: 1px solid #ddd;
+          display: inline-block;
+          text-align: center;
+          vertical-align: middle;
+          line-height: 36px;
+          border-radius: 50%;
+          box-sizing: border-box;
+          position: relative;
+          color: #484848;
+          margin-right: 10px;
+          margin-bottom: 10px;
+          &:last-child {
+            margin-right: 0;
+          }
+          &.checked {
+            border-color: #008489;
+            background-color: #008489;
+            color: #fff;
+          }
+          .am-radio,
+          .am-checkbox {
+            display: none;
+            .am-radio-inner ,
+            .am-checkbox-inner{
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
 }
