--- a/app/assets/css/room.less
+++ b/app/assets/css/room.less
@@ -1,48 +1,50 @@
 @import "common";
-.room{
+
+@height: ~'calc(100% - 115px)';
+.room {
   overflow: hidden;
-  .title{
+  .title {
     line-height: 50px;
-    .left{
+    .left {
       text-align: left;
       font-size: 24px;
     }
-    .right{
+    .right {
       text-align: right;
       line-height: 18px;
       flex: none;
-      p{
+      p {
         font-size: 12px;
         color: #868686;
         margin: 0;
       }
-      .time{
+      .time {
         font-size: 16px;
         color: @fontColor;
         font-weight: 600;
       }
-      span{
+      span {
         color: @fontColor;
         font-size: 16px;
       }
     }
   }
-  .today_issue_play{
+  .today_issue_play {
     line-height: 30px;
     color: @fontColor;
     border-bottom: 1px solid #d5d5d5;
     position: relative;
-    h4{
+    h4 {
       font-size: 14px;
       color: @fontColor;
-      margin:0;
+      margin: 0;
       line-height: 40px;
       font-weight: normal;
     }
-    p{
+    p {
       font-size: 13px;
     }
-    .issue_btn{
+    .issue_btn {
       position: absolute;
       top: 50%;
       right: -15px;
@@ -50,50 +52,55 @@
       border-radius: 50px 0 0 50px;
       width: 120px;
       font-size: 15px;
-      &::before{
+      &::before {
         border: none;
       }
     }
 
   }
-  .topIssue{
+  .topIssue {
     font-size: 18px;
-    color:@fontColor;
+    color: @fontColor;
     font-weight: 600;
-    .my_arrow{
+    .my_arrow {
       flex: none;
       color: #979797;
       font-size: 16px;
       font-weight: normal;
     }
-    .my_all{
+    .my_all {
       color: #008489;
     }
   }
-  .top_list{
-    .title{
+  .top_list {
+    .title, .username {
       height: 50px;
-      img{
-        max-width:100%;
-        width:42px;
-        height:42px;
+      img {
+        max-width: 100%;
+        width: 42px;
+        height: 42px;
         background-color: #ccc;
         border-radius: 50%;
         vertical-align: middle;
         display: inline-block;
         float: left;
-        margin-top: 4px;
-        margin-right: 10px;
+        margin: 4px 10px 0 0;
       }
-      .title_right{
+      span {
+        color: @blueColor;
+        i {
+          display: none;
+        }
+      }
+      .title_right {
         line-height: 25px;
-        .nickname{
+        .nickname {
           font-size: 14px;
         }
-        .time{
+        .time {
           font-size: 13px;
         }
-        i{
+        i {
           display: inline-block;
           border-radius: 5px;
           background-color: #f3f2f2;
@@ -103,32 +110,157 @@
           font-style: normal;
           margin-left: 5px;
         }
-        .status{
+        .status {
           float: right;
           color: @yellowColor;
           display: inline-block;
         }
       }
     }
-    .body,.answer{
+    .username {
       line-height: 20px;
-      font-size:14px;
+      height: 25px;
     }
-    .answer span{
+    .body, .answer {
+      line-height: 20px;
+      font-size: 15px;
+      //padding: 0 10px;
+      word-break: break-all;
+    }
+    .answer span {
       color: #ea3e3f;
     }
+    &.me {
+      .username {
+        float: right;
+        img {
+          float: right;
+        }
+      }
+      .body, .answer {
+        text-align: right;
+        clear: both;
+        p {
+          line-height: 20px;
+          display: inline-block;
+          text-align: left;
+        }
+      }
+    }
+    &.publisher,
+    &.teacher {
+      .username {
+        span {
+          color: @redColor;
+          i {
+            display: inline-block;
+            font-style: normal;
+            padding: 0 3px;
+            background-color: @redColor;
+            border-radius: 5px;
+            color: #fff;
+          }
+        }
+      }
+    }
+    &.chatMsg {
+      img {
+        width: 24px;
+        height: 24px;
+      }
+    }
+    &:last-child {
+      .line{
+        border-bottom: none !important;
+      }
+    }
   }
-  .top_list:last-child{
-    border-bottom: none;
-  }
-  .topList_box{
+
+
+  .topList_box {
     margin-top: 45px;
   }
-  .am-tabs-default-bar-underline{
+  .am-tabs-default-bar-underline {
     width: 15% !important;
   }
-  .am-tab-bar-item{
+  .am-tab-bar-item {
     overflow: hidden;
+  }
+}
+
+//互动
+.interaction {
+  .chat-content {
+    height: @height;
+    overflow: auto;
+  }
+  .chat-input {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    padding: 5px 0;
+    border-top: 1px solid #ddd;
+    .am-list-line {
+      border: 1px solid #ddd;
+      border-radius: 40px;
+      margin-right: 75px;
+    }
+    input {
+      line-height: 40px;
+      height: 40px;
+      padding: 3px 0 3px 0;
+      font-size: 15px;
+    }
+    .chatSend {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      z-index: 99;
+      border-radius: 40px;
+      line-height: 40px;
+      height: 40px;
+      font-size: 14px;
+      background-color: #008489;
+    }
+    .am-input-label-5 {
+      width: 40px;
+      .showImg {
+        margin-left: 6px;
+        width: 30px;
+        height: 30px;
+      }
+    }
+    #embox {
+      position: absolute;
+      z-index: 1000;
+      bottom: 61px;
+      height: 0;
+      overflow: hidden;
+      left: 0;
+      background: #fff;
+      width: 100%;
+      > table {
+        width: 100%;
+        border-top: 1px solid #ddd;
+        td {
+          text-align: center;
+          padding: 3px 1px;
+          img {
+            width: 24px;
+            height: 24px;
+          }
+        }
+      }
+    }
+  }
+  .room_close{
+    text-align: center;
+    margin-top: 50%;
+    P{
+      line-height: 40px;
+      color: #484848;
+    }
   }
 }
 
