--- a/app/assets/css/addIssue.less
+++ b/app/assets/css/addIssue.less
@@ -1,7 +1,6 @@
 @import "common";
 .addIssue{
   .subject{
-    margin-top: 55px;
     .button{
       margin-right: 5px;
       margin-bottom: 5px;
@@ -32,5 +31,6 @@
     border:none;
     line-height: 25px;
     width: 100%;
+    resize: none;
   }
 }
