--- a/app/assets/css/login.less
+++ b/app/assets/css/login.less
@@ -69,7 +69,7 @@
       padding: 0;
     }
     .am-list-item:not(:last-child) .am-list-line{
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #ddd !important;
     }
     .am-list-item .am-input-label.am-input-label-5{
       max-width: 85px;
