--- a/app/assets/css/me.less
+++ b/app/assets/css/me.less
@@ -51,6 +51,7 @@
 }
 
 .order {
+  overflow: hidden;
   .am-tabs-default-bar {
     box-shadow: none !important;
   }
@@ -60,7 +61,7 @@
   }
 
   .am-tabs-default-bar-underline {
-    width: 19% !important;
+    width: 15% !important;
   }
   .count {
     margin: 25px 0 15px;
@@ -199,5 +200,6 @@
     border-radius: 5px;
     margin-top: 20px;
     margin-bottom: 20px;
+    resize: none;
   }
 }
