--- a/app/assets/css/studyPlan.less
+++ b/app/assets/css/studyPlan.less
@@ -44,6 +44,9 @@
   }
   .startPlan {
     font-size: 15px;
+    &.am-button{
+      border:none;
+    }
   }
   .today_date {
     .my_arrow, .my_ellipsis {
