--- a/app/assets/css/room.less
+++ b/app/assets/css/room.less
@@ -50,6 +50,7 @@
       right: -15px;
       margin-top: -25px;
       border-radius: 50px 0 0 50px;
+      border:none;
       width: 120px;
       font-size: 15px;
       &::before {
@@ -207,7 +208,6 @@
       margin-right: 75px;
     }
     input {
-      line-height: 40px;
       height: 40px;
       padding: 3px 0 3px 0;
       font-size: 15px;
@@ -221,7 +221,8 @@
       line-height: 40px;
       height: 40px;
       font-size: 14px;
-      background-color: #008489;
+      background-color: @blueColor;
+      border:1px solid @blueColor;
     }
     .am-input-label-5 {
       width: 40px;
